# fastapi-oauth

./: .pre-commit-config.yaml  README.md  build-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt
.github/actions/: setup_python_poetry.yml  test.yml
.github/actions/setup_python_poetry/: action.yaml
.github/actions/test/: action.yaml  action.yml
.github/workflows/: build.yml  test.yml
src/fastapi_oauth/: __init__.py  base.py  consts.py  helper.py
src/fastapi_oauth/common/: context.py  deps.py  encoding.py  errors.py  security.py  setting.py  types.py  urls.py
src/fastapi_oauth/provider/: __init__.py  authorization_server.py  errors.py  resource_protector.py  setting.py  signals.py
src/fastapi_oauth/rfc6749/: __init__.py  authenticate_client.py  authorization_server.py  errors.py  mixins.py  models.py  parameters.py  resource_protector.py  token_endpoint.py  types.py  util.py  wrappers.py
src/fastapi_oauth/rfc6749/grants/: __init__.py  authorization_code.py  base.py  client_credentials.py  implicit.py  refresh_token.py  resource_owner_password_credentials.py
src/fastapi_oauth/rfc6750/: __init__.py  errors.py  parameters.py  token.py  validator.py
src/fastapi_oauth/rfc7009/: __init__.py  parameters.py  revocation.py
src/fastapi_oauth/rfc7636/: __init__.py  challenge.py
src/fastapi_oauth/sqla_oauth2/: client_mixin.py  functions.py  tokens_mixins.py
src/fastapi_oauth/utils/: consts.py  functions.py
tests/common/: test_encoding.py
