[tool.poetry]
name = "fastapi-oauth"
version = "0.1.1"
description = "OAuth2 Provider in FastAPI"
authors = ["Đỗ Quốc Vương <vuongtlt13@gmail.com>"]
license = "GNU General Public License v3 (GPLv3)"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
SQLAlchemy = {version = "^1.4.42", extras = ["asyncio"]}
Werkzeug = "^2.2.2"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
uvicorn = "^0.19.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
twine = "^4.0.1"
keyring = "^23.9.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[backend]
default-keyring="keyring.backends.SecretService.Keyring"

[project]
name = "fastapi-oauth"
version = "0.1.1"
authors = [
  { name="Đỗ Quốc Vương", email="vuongtlt13@gmail.com" },
]
description = "OAuth2 Provider in FastAPI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vuongtlt13/fastapi-oauth"
"Bug Tracker" = "https://github.com/vuongtlt13/fastapi-oauth/issues"
